# ai-agent-docker-poc

./: README.md  Steps_for_PyPI.md
FastAPI_Ollama_Docker/poc-01/: Test.md  compose.yaml
FastAPI_Ollama_Docker/poc-01/fastapi_app/: Dockerfile  app.py
FastAPI_Ollama_Docker/poc-01/ollama_container/: Ollama.Dockerfile  pull-llama3.sh
MCP/: About_MCP.md
MCP/Random_MCP_Test/: langchain_play.ipynb  open_mcp_tools_play.ipynb  test_people_finder.py
MCP/mcp-hl7-master/: README.md  pyproject.toml
MCP/mcp-hl7-master/src/hl7_master/: server.py
MCP/mcp-people-finder/: README.md  pyproject.toml
MCP/mcp-people-finder/src/people_finder/: server.py
MCP_Client/: mcp_client_demo_file_system.ipynb  using-mcp-people-finder.md
mcp-demo-files/: mcp_client_demo.ipynb  notes.txt  readme.md  sample.py
