[project]
name = "mcp-hl7-master"
version = "0.1.0"
description = "Production-grade HL7 v2 MCP server for generation, parsing, and extraction."
authors = [{name = "Mayank Tripathi", email = ""}]
dependencies = [
    "mcp[cli]>=1.0.0",
    "fastmcp>=0.1.0",
    "hl7apy>=1.3.4",
    "hl7>=0.4.2",
    "faker>=24.0.0",
    "python-dotenv>=1.0.0"
]
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
hl7-master = "hl7_master.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hl7_master"]