[project]
name = "mcp-people-finder"
version = "0.1.1"
description = "Enterprise-grade People Finder MCP Server"
authors = [
    {name = "Mayank Tripathi", email = ""}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",      # The core MCP SDK with CLI tools
    "fastmcp>=0.1.0", # Modern standard for Python MCP
    "python-dotenv>=1.0.0"
]

[project.scripts]
# This creates a command 'people-finder' that users can run after pip install.
# This allows users to type 'people-finder' in their terminal to start the server
people-finder = "people_finder.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/people_finder"]